--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
 	<title></title>
+	<link src='lib/bootstrap-3.3.7-dist/css/bootstrap.min.css' rel='stylesheet'>
+	<link src='lib/bootstrap-3.3.7-dist/css/bootstrap-theme..min.css' rel='stylesheet'>
 </head>
 
 <body>
