--- a/index.html
+++ b/index.html
@@ -1,11 +1,62 @@
 <html>
 <head>
 	<title></title>
-	<link src='lib/bootstrap-3.3.7-dist/css/bootstrap.min.css' rel='stylesheet'>
-	<link src='lib/bootstrap-3.3.7-dist/css/bootstrap-theme..min.css' rel='stylesheet'>
+	<link href='lib/bootstrap-3.3.7-dist/css/bootstrap.min.css' rel='stylesheet'>
+	<link href='lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css' rel='stylesheet'>
+	<link href='dist/css/main.css' rel='stylesheet'>
+	
+	<script src='lib/jquery-3.2.0.min.js'> </script
+	<script src='lib/bootstrap-3.3.7-dist/js/bootstrap.min.js'> </script>
+	<script src='src/js/app.js'></script>
 </head>
 
 <body>
-	<h1>Test</h1>
+	<div class='container-fluid'>
+		<div class='row'>
+			<div class='col-xs-12 text-center'>
+				<h1>Test</h1>
+			</div> <!-- End Col -->
+		</div> <!-- End row -->
+		<div class='form-group'>
+			<label for='dice-quantity'>Dice Quantity</label>
+			<input type='text' class='form-control' id='dice-quantity' />
+			<label for='number-of-sides'>Number of Sides</label>
+			<input type='text' class='form-control' id='number-of-sides' />
+			<button type='submit' id='submit' class='btn btn-default'>Submit</button>
+
+			<div id='result-container'>
+				<h2 id='result'>Result should show here</h2>
+				<p id='result-explanation'>
+					And here's an explanation
+				</p>
+			</div>
+		</div>
+		<script>
+			$( "#submit" ).click(function() {
+				/* Simple version: Rolls them all, doesn't track each roll */
+				// var dice_quantity = $ ( "#dice-quantity" ).val();
+				// var num_of_sides = $ ( "#number-of-sides" ).val();
+
+				// $( "#result").html(Math.floor((Math.random() * dice_quantity * num_of_sides + 1)));
+				// $("#result-explanation").html("Rolled " + dice_quantity + " d" + num_of_sides);
+
+				/* More complicated. outputs rolls */
+				var dice_quantity = $ ("#dice-quantity").val();
+				var num_of_sides = $ ( "#number-of-sides" ).val();
+				var roll_total = 0;
+				var current_roll;
+				var output = "";
+				for (var i = 1; i <= dice_quantity; i++) {
+					current_roll =  Math.floor((Math.random() * num_of_sides + 1));
+					output += "Roll " + i + ": " + current_roll + "<br/>";
+					console.log("Roll " + i + ": " + current_roll);
+					roll_total += current_roll;
+				}
+				console.log("total: " + roll_total);
+				$( "#result").html(roll_total);
+				$( "#result-explanation").html(output);
+			});
+		</script>
+	</div>	
 </body>
 </html>
