add title to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title></title>
+	<title>Online Dice Roller</title>
 	<link href='lib/bootstrap-3.3.7-dist/css/bootstrap.min.css' rel='stylesheet'>
 	<link href='lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css' rel='stylesheet'>
 	<link href='dist/css/main.css' rel='stylesheet'>
